14-modern/deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lvl14
  labels:
    kubernetes.io/metadata.name: lvl14
